# rendezvouscxx

./: CMakeLists.txt
cmake/: config.cmake.in  dependencies.cmake
include/: rendezvouscxx.hpp
include/rendezvouscxx/: i_server.hpp  simple_server_base.hpp
test/: CMakeLists.txt  closing_gate_test.cpp  multiple_connection_test.cpp  single_connection_test.cpp
